Fix missing translation on post comment button

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -129,6 +129,7 @@ en:
       hide: "Answered by"
       pinned: "Pinned"
       comments:
+        action: "Post comment"
         placeholder: "Comment…"
     questionbox:
       title: "Ask something!"
