Add links to user actions to filter reports by/from users

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -703,6 +703,8 @@ en:
       ban: "Ban Control"
       title: "Actions"
       list: "Manage list memberships"
+      reports_from: "Reports from %{user}"
+      reports_of: "Reports of %{user}"
     profile:
       badge:
         admin: "Admin"
