--- a/config/locales/voc.en.yml
+++ b/config/locales/voc.en.yml
@@ -24,6 +24,7 @@ en:
     subscribe: "Subscribe"
     unsubscribe: "Unsubscribe"
     register: "Sign up"
+    register_now: "Register now"
     remove: "Remove"
     report: "Report"
     terms: "Terms of Service"
